# RootSpace

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  test-agent-2.js  test-agent.js  tsconfig.json  vitest.config.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  node.js.yml  npm-publish.yml  rust.yml
dashboard/: package-lock.json  package.json
dashboard/src/: App.css  App.jsx  sanity.test.js
docs/: AIRGAP.md  COMPLIANCE.md  api.md  architecture.md  asyncapi.yml  dashboard-arch.md  rfc-v2-rust.md  wiki.md
examples/: agent-client.js
examples/python/: agent.py
rust-v2/: Cargo.toml  check_output.txt
rust-v2/src/: behaviour.rs  main.rs  persistence.rs  validator.rs  wasm_engine.rs
scripts/: start-daemon.sh
src/: agent-api.js  agent-api.test.js  crypto-utils.js  daemon.js  index.js  mcp-server.js  persistence.js  sanity.test.js
tests/: README.md  swarm-demo.js  test-agent-2.js
