[package]
name = "rust-v2"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
libp2p = { version = "0.56", features = ["tcp", "dns", "websocket", "noise", "yamux", "gossipsub", "mdns", "macros", "tokio", "quic"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "2.0"
hex = "0.4"
base64 = "0.22"
